# tauri-wasm

./: .gitignore  .gitmodules  CONTRIBUTING.md  Cargo.toml  LICENSE_MIT  README.md  build-tools.js  build.js  makefile  package.json
.github/workflows/: docs.yaml  rustdoc.ym
src/: js.rs  lib.rs
src/api/: app.rs  core.rs  dpi.rs  event.rs  mocks.rs  path.rs  window.rs
src/plugin/: authenticator.rs  autostart.rs  barcode_scanner.rs  biometric.rs  cli.rs  clipboard_manager.rs  deep_link.rs  dialog.rs  fs.rs  geolocation.rs  global_shortcut.rs  haptics.rs  http.rs  log.rs  nfc.rs  notification.rs  opener.rs  os.rs  positioner.rs  process.rs  shell.rs  sql.rs  store.rs  stronghold.rs  updater.rs  upload.rs  websocket.rs  window_state.rs
src/plugins/: dialog.rs  global_shortcut.rs  os.rs  process.rs
src/scripts/api/: app.js  core.js  dpi.js  event.js  image.js  menu.js  mocks.js  path.js  tray.js  webview.js  webviewWindow.js  window.js
src/scripts/plugins/: authenticator.js  autostart.js  barcode-scanner.js  biometric.js  cli.js  clipboard-manager.js  deep-link.js  dialog.js  fs.js  geolocation.js  global-shortcut.js  haptics.js  http.js  log.js  nfc.js  notification.js  opener.js  os.js  positioner.js  process.js  shell.js  sql.js  store.js  stronghold.js  updater.js  upload.js  websocket.js  window-state.js
