[package]
name    = "tauri-wasm"
version = "0.1.0"
edition = "2021"

[package.metadata.docs.rs]
all-features = true



[features]
# Api
all = [ "app", "core", "dpi", "event", "menu", "mocks", "path", "tray", "window" ]
app = [ "dep:semver"] 
core = []
dpi = []
event = ["dep:futures"]
menu = []
mocks = []
path = []
tray = ["dep:url"]
window = ["dep:futures", "event"]
# Plugins
plugin-all = [
    "authenticator",
    "autostart",
    "barcode-scanner",
    "cli",
    "clipboard-manager",
    "deep-link",
    "dialog",
    "fs",
    "global-shortcut",
    "http",
    "log",
    "notification",
    "os",
    "positioner",
    "process",
    "shell",
    "sql",
    "store",
    "stronghold",
    "updater",
    "upload",
    "websocket",
    "window-state"
]
authenticator = []
autostart = []
barcode-scanner = []
cli = []
clipboard-manager = []
deep-link = []
dialog = []
fs = []
global-shortcut = []
http = []
log = []
notification = []
os = []
positioner = []
process = []
shell = []
sql = []
store = []
stronghold = []
updater = []
upload = []
websocket = []
window-state = []



[dependencies]
js-sys = "0.3.67"
serde = "1.0.195"
serde_repr = "0.1.18"
serde-wasm-bindgen = "0.6.3"
wasm-bindgen = "0.2.90"
wasm-bindgen-futures = "0.4.40"
thiserror = "1.0.56"
futures = { version = "0.3.30", optional = true }
url = {version = "2.5.0", optional = true, features = ["serde"]}
semver = {version = "1.0.21", optional = true, features = ["serde"]}