[package]
name    = "tauri-wasm"
version = "0.1.1"
edition = "2024"

[package.metadata.docs.rs]
all-features = true



[features]
# Api
all = [ "app", "core", "dpi", "event", "menu", "mocks", "path", "tray", "webview-window", "webview", "window" ]
app = [ "dep:semver"] 
core = [ "dep:url" ]
dpi = []
event = ["dep:futures"]
menu = []
mocks = []
path = []
tray = ["dep:url"]
webview-window = ["dep:futures", "event"]
webview = ["dep:futures", "event"]
window = ["dep:futures", "event"]
# Plugins
plugin-all = [
    "authenticator",
    "autostart",
    "barcode-scanner",
    "biometric",
    "cli",
    "clipboard-manager",
    "deep-link",
    "dialog",
    "fs",
    "geolocation",
    "global-shortcut",
    "haptics",
    "http",
    "log",
    "nfc",
    "notification",
    "os",
    "positioner",
    "process",
    "shell",
    "sql",
    "store",
    "stronghold",
    "updater",
    "upload",
    "websocket",
    "window-state"
]
authenticator = []
autostart = []
barcode-scanner = []
biometric = []
cli = []
clipboard-manager = []
deep-link = []
dialog = []
fs = []
geolocation = []
global-shortcut = []
haptics = []
http = []
log = []
nfc = []
notification = []
os = []
positioner = []
process = []
shell = []
sql = []
store = []
stronghold = []
updater = []
upload = []
websocket = []
window-state = []



[dependencies]
js-sys = "0.3.77"
serde = "1.0.219"
serde_repr = "0.1.20"
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
thiserror = "2.0.12"
futures = { version = "0.3.25", optional = true }
url = {version = "2.5.2", optional = true, features = ["serde"]}
semver = {version = "1.0.23", optional = true, features = ["serde"]}